--- a/site/03-exploratory-data-analysis.qmd
+++ b/site/03-exploratory-data-analysis.qmd
@@ -11,7 +11,7 @@
 
 #### Using `seaborn` for graphical summaries
 
-#### Numpy and scipy for numerica summaries
+#### Numpy and scipy for numerical summaries
 
 ## Exercises
 
