--- a/site/14-binary-regression.qmd
+++ b/site/14-binary-regression.qmd
@@ -8,5 +8,17 @@ This page is ***not finished***, but might contain notes from the course develop
 * James et al., Chapters 4.1 - 4.3, 4.7.1 - 4.7.7
 
 ## Exercises
+### Conceptual exercises
+- 3.7.1
+- 3.7.2
+- 3.7.3
+- 3.7.4 Verify your answers using a suitable Python simulation.
+- 3.7.5
+- 3.7.6 Verify it graphically in Python using a suitable simulation.
+
+### Applied exercises
+
+- 3.7.8
+- 3.7.9-3.7.12
 
 ## Recommended resources
